2005-11-16   Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: fixed an off-by-one bug that would break code whenever capturing intensity projections with a stride of 1.

2005-11-15   Jeremy Cribb <jcribb@email.unc.edu>
	* raw_mean_subtract.m added. performs mean subtraction from a .raw file and saves a new .raw file

2005-11-15  Jeremy Cribb <jcribb@email.unc.edu>
	* enhance_contrast.m: added. increases gain for pulnix .raw files and saves a new .raw file.  maximum pixel value is set to 1 (255).

2005-11-01  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: added mean projection image as a mode.

2005-05-16  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: adjusted output so that if an output variable is defined, the MIP is outputted as a 2D matrix, otherwise it just displays an image of the MIP.

2005-05-15  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2img.m: fixed a bug that offset the frame number by one.

2005-05-09  Jeremy Cribb <jcribb@email.unc.edu>
	* swaplines.m: added.  Swaps lines in image(s) if Pulnix misbehaves.

2005-02-11  Ben Wilde <wilde@cs.unc.edu>
	* beadOrbitAngles.m: Added this file, which computes the angle that a bead orbits around a rod.

2005-02-10  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: fixed time bug for when file started in middle.

2005-02-09  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2avi.m: added some image processing for handling low-light datasets.
	* clipraw.m: added.  cuts out and saves a range of frames as a new RAW file.

2005-01-26  Jeremy Cribb <jcribb@email.unc.edu>
	* get_mips.m: added.  runs and saves single or batches of max(min)imum intensity projection images.  This function calls mip.m and is for batch processing only.

2005-12-20  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2img.m: set the output of the function to the last image processed.  Useful for immediately looking at an image after conversion.

2004-12-09  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: fixed a bug I introduced by fixing off-by-one error.
